Theme/ElegantFin-theme-nightly.css
/* ... */
.itemExternalLinks.focuscontainer-x > .button-link {
    color: var(--textColor);
    background-color: var(--selectorBackgroundColor);
    padding: 0.125em 0.5em;
    border-radius: var(--smallerRadius);
    margin-bottom: 0.5em;
}

.layout-mobile .itemExternalLinks.focuscontainer-x > .button-link:hover:not(:active) {
    color: var(--textColor) !important;
}

.layout-desktop .itemExternalLinks.focuscontainer-x > a:hover,
.itemExternalLinks.focuscontainer-x > a:active {
    background-color: var(--activeColor) !important;
    color: white !important;
}

.layout-desktop .itemExternalLinks.focuscontainer-x > a[href*="themoviedb.org"]:hover,
.itemExternalLinks.focuscontainer-x > a[href*="themoviedb.org"]:active {
    background-color: rgb(26, 183, 216) !important;
    color: black !important;
}

.layout-desktop .itemExternalLinks.focuscontainer-x > a[href*="imdb.com"]:hover,
.itemExternalLinks.focuscontainer-x > a[href*="imdb.com"]:active {
    background-color: rgb(226, 182, 22) !important;
    color: black !important;
}

.layout-desktop .itemExternalLinks.focuscontainer-x > a[href*="thetvdb.com"]:hover,
.itemExternalLinks.focuscontainer-x > a[href*="thetvdb.com"]:active {
    background-color: rgb(108, 213, 145) !important;
    color: black !important;
}

.layout-desktop .itemExternalLinks.focuscontainer-x > a[href*="trakt.tv"]:hover,
.itemExternalLinks.focuscontainer-x > a[href*="trakt.tv"]:active {
    background-color: rgb(171, 58, 173) !important;
    color: var(--textColor) !important;
}

.layout-desktop .itemExternalLinks.focuscontainer-x > a[href*="theaudiodb.com"]:hover,
.itemExternalLinks.focuscontainer-x > a[href*="theaudiodb.com"]:active {
    background-color: rgb(99, 153, 204) !important;
    color: rgb(15, 22, 28) !important;
}

.layout-desktop .itemExternalLinks.focuscontainer-x > a[href*="musicbrainz.org"]:hover,
.itemExternalLinks.focuscontainer-x > a[href*="musicbrainz.org"]:active {
    background-color: rgb(186, 71, 143) !important;
    color: var(--textColor) !important;
}

.itemTags,
.itemTags > a {
    display: none;
    font-size: unset !important;
    font-weight: 200;
}

.detail-clamp-text {
    text-align: start;
    color: var(--dimTextColor);
    margin-top: 0;
    margin-bottom: 0;
}

.detail-clamp-text p {
    margin-top: 0.25em;
    margin-bottom: 0.25em;
}

.layout-desktop .detail-clamp-text {
    -webkit-line-clamp: 2;
}

.layout-mobile .detail-clamp-text {
    -webkit-line-clamp: 4;
}

.layout-tv .detail-clamp-text {
    -webkit-line-clamp: 10;
    transition: none;
}

.overview-expand.emby-button {
    padding: 0;
    margin-top: 1.4em;
    margin-bottom: 1.4em;
    color: transparent;
}

.overview-expand.emby-button:after {
    content: "keyboard_arrow_down";
    font-family: var(--iconPack);
    font-feature-settings: "liga";
    background: var(--selectorBackgroundColor);
    border-radius: 50%;
    width: 1.5em;
    height: 1.5em;
    align-content: center;
    line-height: 1.6ch;
    transition: transform 0.5s;
    color: var(--textColor);
}

.overview.detail-clamp-text ~ .overview-controls .overview-expand:after {
    transform: rotateZ(0deg);
}

.overview:not(.detail-clamp-text) ~ .overview-controls .overview-expand:after {
    transform: rotateZ(180deg);
}

.overview-controls {
    height: 0;
}

.detailSectionContent:has(.itemExternalLinks.hide) .overview-controls {
    height: 1em;
}

#seriesAirTime {
    margin-top: 0.5em;
}

.itemMiscInfo {
    align-items: flex-end !important;
    justify-content: center;
}

.innerCardFooter,
.chapterCardImageContainer {
    width: 100%;
    box-sizing: border-box;
}

.innerCardFooter,
.chapterThumbTextContainer {
    background: var(--cardFooterGradient);
    text-shadow: 0.1em 0.1em 0px black;
    padding: 0em 2em 2em 2em;
    align-content: end;
    display: grid;
    height: 100%;
}

.chapterCardImageContainer {
    background-size: 135%;
}

.chapterCardImageContainer + .innerCardFooter {
    padding: 0em 1em 1em 1em;
    height: auto;
}

.layout-mobile .innerCardFooter {
    padding: 5em 1em 1.25em 1em;
}

.layout-mobile .chapterCardImageContainer + .innerCardFooter {
    padding: 0em 0.5em 0.5em 0.5em;
}

.centerMessage {
    width: unset;
}

.noItemsMessage {
    width: 90%;
}

.dialog {
    backdrop-filter: var(--blurDefault);
    background-color: var(--drawerColor);
    min-width: 11em;
}

[dir="ltr"] .emby-collapsible-button {
    padding-left: 1em;
}

.dialog:not(.dialog-fullscreen) {
    border-radius: var(--largeRadius) !important;
    border: var(--defaultBorder);
}

@media (max-width: 80em), (max-height: 45em) {
    .dialog.dialog-fixedSize,
    .dialog.dialog-fullscreen-lowres {
        border-radius: unset !important;
        border: unset;
    }

    /* body:has(.dialog.dialog-fixedSize.opened,
        .dialog.dialog-fullscreen-lowres.opened) {
        overflow: hidden;
    } */
}

.dialogBackdropOpened {
    opacity: 0.66;
}

.subtitleEditor-dropZone,
.imageEditor-dropZone,
.lyricsEditor-dropZone {
    border-radius: var(--largeRadius);
}

.formDialogHeaderTitle {
    margin-inline-start: 0 !important;
    margin-inline-end: 0 !important;
    text-align: center;
    padding: 0 0.5em !important;
}

.formDialogFooter:not(.formDialogFooter-clear.formDialogFooter-flex) > .formDialogFooterItem {
    -webkit-flex-basis: 6em;
    flex-basis: 6em;
}

.collapseContent {
    background-color: unset !important;
    backdrop-filter: unset !important;
}

.selectionCommandsPanel {
    background: var(--lighterGradientPoint);
    border-bottom: var(--defaultBorder);
    backdrop-filter: var(--blurLarge);
}

.selectionCommandsPanel > h1 {
    font-size: large;
}

.itemSelectionPanel {
    border: unset;
    background-color: transparent;
}
/* ... */

